tests/baselines/reference/rangeTypeAssignment.errors.txt
tests/cases/compiler/rangeTypeAssignment.ts(8,5): error TS2322: Type 'number' is not assignable to type '(< 0)'.
tests/cases/compiler/rangeTypeAssignment.ts(9,5): error TS2322: Type 'number' is not assignable to type '(> 0)'.
tests/cases/compiler/rangeTypeAssignment.ts(19,5): error TS2322: Type '(>= 0)' is not assignable to type 'C'.


==== tests/cases/compiler/rangeTypeAssignment.ts (3 errors) ====
    let a1: (> 0) = 1;
    let a2: number = a1;
    let a3: (> -1) = a1;
    let a4: (>= 0) = a1;
    let a5: (> 0) = a1;
    
    let b1: number = 0;
    let b2: (< 0) = b1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '(< 0)'.
    let b3: (> 0) = b1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '(> 0)'.
    
    enum C {
        foo,
        bar
    }
    
    let c1: C = C.foo;
    let c2: (>= 0) = C.foo;
    
    let c3: C = c2;
        ~~
!!! error TS2322: Type '(>= 0)' is not assignable to type 'C'.
    